DDCE-1408: Fix alignment of status tags on officials summary pages (#380)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,3 +51,8 @@ $hmrc-assets-path: "/register-charity-hmrc/assets/lib/hmrc-frontend/hmrc/";
 .hmrc-add-to-a-list__contents {
     padding-bottom: 35px;
 }
+
+.official-status-tag{
+ margin-bottom: -6px;
+}
+
